Fix stretched logo on IOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2504,8 +2504,7 @@ input[type=color] {
   opacity: 1;
 }
 .tp-header__logo img {
-  height: 100%;
-  max-height: 40%;
+  max-height: 50px;
 }
 .tp-header__main-menu ul {
   text-align: center;
